# fusion-cam-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  fusion-cam-mcp.spec  hatch_build.py  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
fusion-bridge/: executor.py  fusion-bridge.manifest  fusion-bridge.py  tcp_server.py
fusion-cam-mcp-addin/: cam_handler.py  fusion-cam-mcp-addin.manifest  fusion-cam-mcp-addin.py
fusion-cam-mcp-server/: fusion_client.py  installer.py  server.py
fusion-cam-mcp-server/queries/: _1_base.py  _2_params.py  _3_lookups.py  _4_machine.py  _5_tools.py  _6_operations.py  __init__.py  _helpers.py  assign_body_material.py  create_custom_material.py  get_document_info.py  get_library_tools.py  get_material_properties.py  get_nc_programs.py  get_operation_details.py  get_operations.py  get_setups.py  get_toolpath_status.py  get_tools.py  list_material_libraries.py  post_process.py  update_operation_params.py  update_setup_machine_params.py
fusion-mcp-bridge/: executor.py  fusion-mcp-bridge.manifest  fusion-mcp-bridge.py  tcp_server.py
samples/: cursor_fusion_project_feedback_for_the.md
src/fusion_cam/: __init__.py  cam_api.py  cli.py  fusion_client.py  installer.py  version_info.py
src/fusion_cam/debug_scripts/: read_only_api_probe.py
src/fusion_cam/queries/: _6_operations.py  __init__.py  create_custom_material.py  generate_toolpaths.py  get_document_info.py  get_machining_time.py  get_setups.py  list_documents.py  post_process.py  update_setup_machine_params.py
