[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "fusion-cam-mcp"
version = "0.1.0"
description = "MCP server exposing Fusion 360 CAM/manufacturing data to AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "bjam" },
]
keywords = ["mcp", "fusion360", "cam", "cnc", "manufacturing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/bjam/fusion-cam-mcp"
Repository = "https://github.com/bjam/fusion-cam-mcp"
Issues = "https://github.com/bjam/fusion-cam-mcp/issues"
