[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion-cam-mcp"
version = "0.1.0"
description = "Fusion 360 CAM CLI — query setups, tools, and feeds/speeds via the Fusion bridge add-in"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "bjam" },
]
keywords = ["fusion360", "cam", "cnc", "manufacturing", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
fusion-cam = "fusion_cam.cli:main"

[project.urls]
Homepage = "https://github.com/bjam/fusion-cam-mcp"
Repository = "https://github.com/bjam/fusion-cam-mcp"
Issues = "https://github.com/bjam/fusion-cam-mcp/issues"

[tool.hatch.build]
sources = ["src"]
# Editable installs: map `fusion_cam` under `src/` (detection mode yields an empty `.pth` with `sources`).
dev-mode-dirs = ["src"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["fusion_cam"]
